--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -286,7 +286,7 @@ ul.noBullet
   :margin-bottom 1em
   :text-align center
 
-.metaBox
+.infoBox
   :border 1px solid #ccc
   :background #eee
   :font-size smaller
