--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,9 @@
     %meta{ 'http-equiv'=>"content-type", :content=>"text/html;charset=UTF-8" }
     - if @page_desc
       = tag(:meta, { :name=>'description', :content => @page_desc })
+    - if @no_index
+      = tag(:meta, { :name=>'robots', :content => 'noindex' })
     = stylesheet_link_tag :all, :cache => true, :media => 'all'
-    = javascript_include_tag :defaults
     = yield :head
     - if RAILS_ENV == 'development'
       %style{ :type=>'text/css' }
