--- a/app/views/partials/_banner.html.haml
+++ b/app/views/partials/_banner.html.haml
@@ -1,5 +1,5 @@
 #banner
   %h2#siteTitle
     %a{ :href=>"/", :accesskey => '1' }
-      <img src="/images/logo-small.png" alt="Opening Times logo" width="96" height="96" />
+      = render :partial => 'partials/logo'
       Opening-Times.co.uk
