Updated about and copyright, AGPL

--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -2,14 +2,14 @@
 
 %p
   Opening Times is a personal project created in my spare time.
-  My aim is to provide comprehensive, accurate opening times information for public facilities such as shops, restaurants, librarie and such like in the UK.
+  My aim is to provide comprehensive, accurate opening times information for facilities such as shops, restaurants, libraries and such like in the UK. The <a href="/copyright">source code and data are both available under an open license</a>.
 
 %p
   Currently the website is under testing so there may be errors, incorrect or missing information.
   I am really keen to hear feedback from any users, so please
   = link_to( "get in touch", feedback_path) + '.'
 
-%h2 Open source projects
+%h2 Thanks
 %p Thanks to the following free open source projects which I used to build Opening Times.
 
 %ul
@@ -28,17 +28,8 @@
     = link_to 'Firefox', 'http://www.mozilla.com/firefox'
     = link_to 'Firefox HTML validator', 'http://users.skynet.be/mgueury/mozilla'
     = link_to 'Inkscape', 'http://www.inkscape.org/'
-
-%h3 Creative Commons
-
 %ul
   %li
     Icons:
     = link_to "FAMFAMFAM", 'http://www.famfamfam.com/lab/icons/silk/'
-
-%h2 Robots
-
-%p
-  Please don't use robots to scrape data off my site. If you want the data
-  = link_to 'get in touch', feedback_path
-  and we'll sort out something more efficient.
+    (Creative Commons)
