--- a/app/views/about/feedback.html.haml
+++ b/app/views/about/feedback.html.haml
@@ -1,19 +1,13 @@
 - @page_title = "Feedback"
 %h1= @page_title
 
+.highlight
+  %ul
+    %li Opening Times is <b>not</b> affiliated with any of the facilties listed on this site, please contact them directly with feedback regarding their service
+    %li I appolgise if the opening times information is incorrect. Please help improve Opening Times by <a href="/register">creating an account</a> and correcting it directly.
+
 %p
-  For development questions and bugs please see the Opening Times project on GitHub.
-
-
-%p
-  Contact the shops listed on Opening Times with any comments about their services.
-
-%ul
-  %li= link_to 'ASDA', 'http://www.about-asda.com/contact-us.asp'
-  %li= link_to 'Netto', 'http://www.netto.co.uk/internet/nettog/menu/main.nsf'
-  %li= link_to 'Sainsbury\'s', 'http://www.sainsburys.co.uk/furniture/contactus/contactus.htm'
-  %li= link_to 'Tesco', 'http://www.tesco.com/help/jump.asp?choiceB=4'
-  %li= link_to 'Waitrose', 'http://www.waitrose.com/footer/contactus.aspx'
+  Found a bug? Please add it to the <a href="http://github.com/aubergene/Opening-Times/issues">Opening Times project on GitHub</a>.
 
 %p
   If you have any queries about this website please get in touch.
