--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -173,7 +173,7 @@ address
     :color #000
     :background #bbb
 
-#flash
+.flash
   :margin auto
   :margin-top .5em
   :background #ff9
@@ -247,7 +247,7 @@ address
   :background-color= !foreground2
   :padding 1em
   :padding-bottom 6em
-  :margin-top 16px
+  :margin-top 36px
   :text-align center
   p
     :font-size .7em
