--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
         body { background: url(/images/development-mode.png) #f9f; }
 
   %body{ :onload => @onload, :unload => @onunload }
+    %a{ :name => "top", :id => "top" }
     #allContent
       %a#skipToContent{:href=>'#content', :accesskey=>'s'}
         %img{:src=>'/images/invis.png',:width=>1,:height=>1, :alt=>'Skip to content'}
