--- a/app/views/about/recentchanges.xml.haml
+++ b/app/views/about/recentchanges.xml.haml
@@ -1,11 +1,17 @@
-!!! xml
-%facilitys
-  - for v in @revisions
-    %facility
-      %version_id= v.id
-      %facility_id= v.facility_id
-      %name= h(v.facility.full_name)
-      %url= facility_url(v.facility)
-      %data_url= facility_revisions_url(v.facility, v)
-      %created_by= v.created_by
-      %created_at= v.created_at
+!!!XML
+%feed{ :xmlns => "http://www.w3.org/2005/Atom" }
+  %id= recentchanges_url
+  %link{ :href => recentchanges_url(:format => "xml"), :rel => "self" }
+  %title{ :type => "text" }= "Opening Times recent changes"
+  %updated= @revisions.first.created_at.iso8601
+
+  - @revisions.each do |r|
+    %entry
+      %id= facility_url(r.facility_id)
+      %title{ :type => "text" }= "User: #{r.created_by}, length: #{r.length}"
+      %link{ :rel => "alternate", :href => facility_revision_url(r.facility_id, r) }
+      %author
+        %name= "User ID: #{h(r.created_by)}"
+        %uri= user_url(r.created_by)
+      %updated= r.created_at.iso8601
+      %summary=h r.comment
