Working on retired_at functionality

--- a/app/views/facilities/show.html.haml
+++ b/app/views/facilities/show.html.haml
@@ -62,26 +62,4 @@
         - @nearby[0...5].each_with_index do |nearby,index|
           %li= link_to h(nearby.full_name), facility_slug_path(nearby.slug)
 
-      .infoBox
-        %ul
-          %li
-            ID:
-            = @facility.id
-          %li
-            Last updated:
-            = @facility.updated_at
-          %li
-            Updated by:
-            = link_to @facility.updated_by, user_path(@facility.updated_by)
-          %li
-            .geo
-              Geo:
-              %span.latitude= @facility.lat
-              %span.longitude= @facility.lng
-          %li
-            = link_to 'RSS', facility_revisions_path(@facility, :format => "xml"), :rel => "alternate", :type => "application/atom+xml"
-
-          %li
-            = link_to 'Edit', edit_facility_path(@facility.id)
-          %li
-            = link_to "Revision #{@facility.revision}", facility_revisions_path(@facility.id)
+      = render 'facilities/infobox'
