--- a/app/views/about/accessibility.html.haml
+++ b/app/views/about/accessibility.html.haml
@@ -1,14 +1,17 @@
 - @page_title = "Accessibility"
 %h1= @page_title
-%p 
-  I have tried to make this website as accessible as possible, 
-  if you have any issues whilst using this website 
+%p
+  I have tried to make this website as accessible as possible,
+  if you have any issues whilst using this website
   or have any suggestions to enhance the usability then please
-  = link_to('contact me', feedback_path) + '.'  
+  = link_to('contact me', feedback_path) + '.'
 
 %h2 Accesskeys
 %ul
   %li s - Skip to content
   %li 1 - Home page
   %li 4 - Search box
+  %li 8 - Copyright, terms and conditions
   %li 9 - Accessibility info (this page)
+
+%p More information on <a href="http://en.wikipedia.org/wiki/Access_key">Access keys</a>
