--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,10 +1,11 @@
 #footer
   %ul
     %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
-    %li= link_to 'About', about_path
+    %li= link_to 'About', about_path, :accesskey => '8'
     %li= link_to 'FAQ', faq_path, :title=>'Frequently Asked Questions'
     %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
     %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
+    %li= link_to 'Privacy', privacy_path
     %li= link_to 'Feedback', feedback_path
     %li
       %strong
