Zoom to markers in group but keep center on location

--- a/app/views/search/_map_search.html.erb
+++ b/app/views/search/_map_search.html.erb
@@ -9,7 +9,7 @@ function fitMap( map, points ) {
       bounds.extend(points[i]);
    }
    map.setZoom(map.getBoundsZoomLevel(bounds));
-   map.setCenter(bounds.getCenter());
+//   map.setCenter(bounds.getCenter());
 }
 
 function initialize() {
