Retire and unretire working, but couldn't get cucumber tests to pass due to some problem with field names. Change migrations again

--- a/app/views/facilities/_infobox.haml
+++ b/app/views/facilities/_infobox.haml
@@ -8,7 +8,7 @@
       = @facility.updated_at
     %li
       Updated by:
-      = link_to @facility.updated_by, user_path(@facility.updated_by)
+      = link_to @facility.user_id, @facility.user
     %li
       .geo
         Geo:
@@ -18,7 +18,6 @@
   %ul
     %li
       = link_to 'Edit', edit_facility_path(@facility)
-      = #link_to 'Delete', destroy_facility_path(@facility)
     %li
       = link_to "Current revision #{@facility.revision}", facility_revisions_path(@facility)
       = link_to 'RSS', facility_revisions_path(@facility, :format => "xml"), :rel => "alternate", :type => "application/atom+xml"
