--- a/app/views/facilities/_form.html.haml
+++ b/app/views/facilities/_form.html.haml
@@ -8,6 +8,7 @@
 - form_for @facility, :html => { :name => 'f' } do |facility_form|
   %small
     * Optional field
+
   %fieldset
     %legend Facility information
     %table.inputFormTable
@@ -79,17 +80,27 @@
 
     %p= add_normal_opening_link("Add another opening", facility_form)
 
-  %br
-  - button_text = @facility.new_record? ? 'Create' : 'Update'
-  = submit_tag button_text, :disable_with => "Please wait...", :class=>'button tick'
-  = submit_tag 'Cancel', :class=>'button cross'
-  %br
   %p
-    = label :facility, :comment, 'Revision comment', :class => "optional"
-    %small (optional - leave a comment to summarise your changes)
+    = label :facility, :comment, 'Edit summary', :class => "optional"
+    %small (optional - briefly describe the changes you have made)
     %br
     = facility_form.text_field :comment, :class => "fullWidth"
 
+  - button_text = @facility.new_record? ? 'Create' : 'Update'
+  = submit_tag button_text, :disable_with => "Please wait...", :class=>'button tick'
 
+  %br
+  %br
+  %fieldset
+    %legend Remove this facility
+    %p
+      = facility_form.check_box :retired?
+      = facility_form.label :retired, 'This facility should be removed from Opening Times'
+    %p
+      = label :facility, :comment, 'Reason for removal'
+      %small (please provide information helpful for people still looking for this facility)
+      %br
+      = facility_form.text_area :comment, :rows => 2, :class => "fullWidth"
+    = submit_tag "Remove", :disable_with => "Please wait...", :class=>'button cross'
 
   %br
