Tweaks to about pages and such

--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -5,31 +5,32 @@
   My aim is to provide comprehensive, accurate opening times information for facilities such as shops, restaurants, libraries and such like in the UK. The <a href="/copyright">source code and data are both available under an open license</a>.
 
 %p
-  Currently the website is under testing so there may be errors, incorrect or missing information.
+  Currently the website is under testing so there may be errors, bugs, incorrect or missing information.
   I am really keen to hear feedback from any users, so please
   = link_to( "get in touch", feedback_path) + '.'
 
 %h2 Thanks
-%p Thanks to the following free open source projects which I used to build Opening Times.
+
+%p Thanks to Laura, my parents and all my friends and colleagues who put up with me.
+
+%h3 Open Source software used
+
+%p
+  Thanks to the following open source projects which were used to help build Opening Times
 
 %ul
+  %li= link_to 'Ruby', 'http://www.ruby-lang.org'
+  %li= link_to 'Ruby on Rails', 'http://www.rubyonrails.org'
+  %li= link_to 'Linux', 'http://www.linux.org'
+  %li= link_to 'GNU', 'http://www.gnu.org'
+  %li= link_to 'Ubuntu', 'http://www.ubuntu.com'
+  %li= link_to 'Git', 'http://git.or.cz'
+  %li= link_to 'Thin', 'http://code.macournoyer.com/thin/'
+  %li= link_to 'Nginx', 'http://nginx.net'
+  %li= link_to 'Firefox', 'http://www.mozilla.com/firefox'
+  %li= link_to 'Firefox HTML validator', 'http://users.skynet.be/mgueury/mozilla'
+  %li= link_to 'Inkscape', 'http://www.inkscape.org/'
   %li
-    = link_to 'Ruby', 'http://www.ruby-lang.org'
-    = link_to 'Ruby on Rails', 'http://www.rubyonrails.org'
-  %li
-    = link_to 'Ubuntu', 'http://www.ubuntu.com'
-    = link_to 'GNU', 'http://www.gnu.org'
-    = link_to 'Linux', 'http://www.linux.org'
-    = link_to 'Git', 'http://git.or.cz'
-  %li
-    = link_to 'Thin', 'http://code.macournoyer.com/thin/'
-    = link_to 'Nginx', 'http://nginx.net'
-  %li
-    = link_to 'Firefox', 'http://www.mozilla.com/firefox'
-    = link_to 'Firefox HTML validator', 'http://users.skynet.be/mgueury/mozilla'
-    = link_to 'Inkscape', 'http://www.inkscape.org/'
-%ul
-  %li
-    Icons:
     = link_to "FAMFAMFAM", 'http://www.famfamfam.com/lab/icons/silk/'
-    (Creative Commons)
+    (Creative Commons icons)
+  %li Any other projects I've forgotten, let me know if you want a link
