--- a/app/views/about/copyright.html.haml
+++ b/app/views/about/copyright.html.haml
@@ -10,13 +10,13 @@
   %li= anchor_to "API"
   %li= anchor_to "Terms and conditions"
 
-
-%p Please note the <a href="http://www.gnu.org/licenses/agpl.html" rel="license">GNU Affero General Public License</a> requires "if you make modifications to the Opening Times source code on your server, you <b>MUST MAKE AVAILABLE</b> the modified version of the source code to your users under the same license". If you make any changes to the source code of your Opening Times installation, you have to share the source with your users, I would recommend using <a href="https://github.com/">GitHub</a>.
-
 %h2= anchor_for "Source Code License"
 
 %p
   = link_to image_tag('agplv3-155x51.png', :alt => "AGPL", :align => "right", :rel => "license"), "http://www.gnu.org/licenses/agpl.html"
+  Please note the <a href="http://www.gnu.org/licenses/agpl.html" rel="license">GNU Affero General Public License</a> requires "if you make modifications to the Opening Times source code on your server, you <b>MUST MAKE AVAILABLE</b> the modified version of the source code to your users under the same license". If you make any changes to the source code of your Opening Times installation, you have to share the source with your users, I would recommend using <a href="https://github.com/">GitHub</a>.
+
+%p
   Opening Times is free software: you can redistribute it and/or modify it under the terms of the <a href="http://www.gnu.org/licenses/agpl.html" rel="license">GNU Affero General Public License</a>as published by the <a href="http://www.fsf.org/">Free Software Foundation</a>, either version 3 of the License, or (at your option) any later version.
 
 %p Opening Times is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
