--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,19 +1,20 @@
 #footer
 
   %ul
-    %li= link_to 'Add a new facility', new_facility_path
-    %li= link_to 'Help', faq_path
+    %li= link_to 'Add a business', new_facility_path
     %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
+    %li= link_to 'Help', help_path
 
   %br
 
-  %ul
-    %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
-    %li= link_to 'About', about_path, :accesskey => '8'
-    %li= link_to 'FAQ', faq_path, :title=>'Frequently Asked Questions'
-    %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
-    %li= link_to 'Privacy', privacy_path
-    %li= link_to 'Feedback', feedback_path
+  %small
+    %ul
+      %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
+      %li= link_to 'About', about_path, :accesskey => '8'
+      %li= link_to 'Guidelines', guidelines_path
+      %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
+      %li= link_to 'Privacy', privacy_path
+      %li= link_to 'Feedback', feedback_path
 
   %p.bookmark= render :partial => 'partials/add_this' if RAILS_ENV == 'production'
 
