--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -110,6 +110,10 @@ ul
   li
     :list-style-image url(/images/bullet.png)
 
+hr
+  :border 1px solid
+  :border-color= !foreground2
+
 address
   :font-style normal
 
