--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -164,13 +164,14 @@ address
   :background #fff
 
 #userBar
-  :background #ccc
+  :background #666
+  :color #ccc
   :padding 2px 8px
   :text-align right
   :font-size 12px
 
 #userBar a
-  :color #444
+  :color #fff
   :text-decoration none
   :padding 2px
   &:hover
