Moved remove form to separate page, still can't fix webrat issue :(

--- a/app/views/compare/index.html.haml
+++ b/app/views/compare/index.html.haml
@@ -45,10 +45,10 @@
   %tr
     %td User
     %td
-      %p= @v1.created_by
+      %p= @v1.user_id
     %td User
     %td
-      %p= @v2.created_by
+      %p= @v2.user_id
   %tr
     %td Comment
     %td
