--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -279,6 +279,8 @@ address
         &:hover
           :color= !foreground1
           :background-color= #ccc
+  ul.small
+    :font-size small
 
 ul.noBullet
   :padding 0
